azureps-cmdlets-docs/ResourceManager/AzureRM.Network/v3.0.0/New-AzureRmVpnClientRevokedCertificate.md
---
external help file: Microsoft.Azure.Commands.Network.dll-Help.xml
online version: df9bef0f-21b4-4e81-8cba-148446b6eb7b
schema: 2.0.0
ms.assetid: 3F210B47-D93A-47E6-927B-AA45FCD6F92D
---

# New-AzureRmVpnClientRevokedCertificate

## SYNOPSIS
Creates a new VPN client-revocation certificate.

## SYNTAX

```
New-AzureRmVpnClientRevokedCertificate -Name <String> -Thumbprint <String> [<CommonParameters>]
```

## DESCRIPTION
The **New-AzureRmVpnClientRevokedCertificate** cmdlet creates a new virtual private network (VPN) client-revocation certificate for use on a virtual network gateway.
Client-revocation certificates prevent client computers from using the specified certificate for authentication.

This cmdlet creates a stand-alone certificate that is not assigned to a virtual gateway.
Instead, the certificate created by **New-AzureRmVpnClientRevokedCertificate** is used in conjunction with the New-AzureRmVirtualNetworkGateway cmdlet when it creates a new gateway.
For instance, suppose you create a new certificate and store it in a variable named $Certificate.
You can then use that certificate object when you create a new virtual gateway.
For instance,

`New-AzureRmVirtualNetworkGateway -Name "ContosoVirtualGateway" -ResourceGroupName "ContosoResourceGroup" -Location "West US" -GatewayType "VPN" -IpConfigurations $Ipconfig  -VPNType "RouteBased" -VpnClientRevokedCertificates $Certificate`

For more information, see the documentation for the New-AzureRmVirtualNetworkGateway cmdlet.

## EXAMPLES

### Example 1: Create a new client-revoked certificate
```
PS C:\>$Certificate = New-AzureRmVpnClientRevokedCertificate -Name "ContosoClientRevokedCertificate" -Thumbprint "E3A38EBA60CAA1C162785A2E1C44A15AD450199C3"
```

This command creates a new client-revoked certificate and stores the certificate object in a variable named $Certificate.
This variable can then be used by the **New-AzureRmVirtualNetworkGateway** cmdlet to add the certificate to a new virtual network gateway.

## PARAMETERS

### -Name
Specifies a unique name for the new client-revocation certificate.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Thumbprint
Specifies the unique identifier of the certificate being added.

You can return thumbprint information for your certificates by using a Windows PowerShell command similar to this:

`Get-ChildItem -Path Cert:\LocalMachine\Root`

The preceding command returns information for all the Local Computer certificates found in the Root certificate store.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see about_CommonParameters (http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

###  
This cmdlet does not accept pipelined input.

## OUTPUTS

###  
This cmdlet creates new instances of the **Microsoft.Azure.Commands.Network.Models.PSVpnClientRevokedCertificate** object.

## NOTES

## RELATED LINKS

[Add-AzureRmVpnClientRevokedCertificate](.\Add-AzureRmVpnClientRevokedCertificate.md)

[Get-AzureRmVpnClientRevokedCertificate](.\Get-AzureRmVpnClientRevokedCertificate.md)

[Remove-AzureRmVpnClientRevokedCertificate](.\Remove-AzureRmVpnClientRevokedCertificate.md)


